--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elsamplio/package-test": "^1.0.8",
+    "@jenicarvalho/tangerine-components-library-storybook": "^0.1.21",
     "express": "^4.17.1",
     "redis": "^3.0.2"
   }
